get projects pagination
